Create: AOE_Market, MOD: settings hello dashboard messages templates

--- a/AOE_Dashboard/templates/dash.html
+++ b/AOE_Dashboard/templates/dash.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}| Are you Curious?{% endblock %}
+{% block title %}are you Curious?{% endblock %}
 
 {% block content %}
 
-<h1>Are you Curious?</h1>
+<h5>are you Curious?</h5>
 
 {% endblock %}
