MOD: nav.html base.html, Config: navBar into base.html

--- a/AOE_Static/templates/base.html
+++ b/AOE_Static/templates/base.html
@@ -5,11 +5,11 @@
 
 <head>
     <!-- Required meta tags -->
-    <title> {% block title %}Data Scrape{% endblock %} </title>
+    <title> {% block title %}sun ra{% endblock %} </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-
+{% include "nav.html" %}
 <body>
     <br><br>
     <div class="page_container">
