--- a/AOE_Static/templates/nav.html
+++ b/AOE_Static/templates/nav.html
@@ -1,8 +1,21 @@
 {% load static from staticfiles %}
 
-<div class="page_container">
-    <br><br>
-    {% block content %} <button>everything</button>{% endblock %}
-    {% block content %} <button>they</button>{% endblock %}
-    {% block content %} <button>choices</button>{% endblock %}
-</div>
+<nav>
+    <div>
+        <ul>
+            <li>
+                <a href="/everything">everything</a>
+            </li>
+            <li>
+                <a href="/messages">.they</a>
+            </li>
+            <li>
+                <a href="/settings">control</a>
+            </li>
+            <li>
+                <a href="/market">.:market:.</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<br>
